--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <div class="col-lg-6">
                     <div class="row gx-3 h-100">
                         <div class="col-6 align-self-start wow fadeInUp" data-wow-delay="0.1s">
-                            <img class="img-fluid" src="img/ola1.jpeg" style="height: 68vh; width: 100%;">
+                            <img class="img-fluid ige" src="img/ola1.jpeg" style="height: 60vh; width: 100%;">
                         </div>
                         <div class="col-6 align-self-end wow fadeInDown" data-wow-delay="0.1s">
                             <img class="img-fluid" src="img/about-2.jpg">
